优化：本地备份增加定时任务

--- a/localRsync/localRsync.conf
+++ b/localRsync/localRsync.conf
@@ -1,8 +1,8 @@
 #projectName;srcPath;distPath;dataType;rsyncOption;
-xwiki;/opt/xwiki/test/tomcat7.1_bak;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf
-yihaikerryba;/opt/yihaikerryba;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf
-esteelauderba;/opt/esteelauderba;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf
-winchannelba;/opt/winchannelba;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf
-meeting;/opt/meeting;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf
-unileverordermeeting;/opt/unileverordermeeting;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf
-rfdszytiga;/opt/rfdszytiga;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf
+xwiki;/opt/xwiki/test/tomcat7.1_bak;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf;00 14 # # #
+yihaikerryba;/opt/yihaikerryba;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf;30 20 # # #
+esteelauderba;/opt/esteelauderba;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf;00 21 # # #
+winchannelba;/opt/winchannelba;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf;00 22 # # #
+meeting;/opt/meeting;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf;30 23 # # #
+unileverordermeeting;/opt/unileverordermeeting;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf;00 00 # # #
+rfdszytiga;/opt/rfdszytiga;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf;30 01 # # #
