--- a/rsync_winc/app_backup.conf
+++ b/rsync_winc/app_backup.conf
@@ -8,9 +8,7 @@
 - *.iso
 - *.bin
 - *.7z
-- *.zip
 - photos/
-- fileClient
 - ROOT/*.zip
 - temp/
 - work/
@@ -29,6 +27,7 @@
 - *tempdownload*/
 - System Volume Information/
 - *winchannel.log*
-- tmp/
-- message/
+- bin/wechat/
+- APP_HOME/wechat/
+- ROOT/zluploadfiles/
 
