--- a/localRsync/localRsync.conf
+++ b/localRsync/localRsync.conf
@@ -1,8 +1,3 @@
 #projectName;srcPath;distPath;dataType;rsyncOption;
-xwiki;/opt/xwiki/test/tomcat7.1_bak;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf;00 14 # # #
-yihaikerryba;/opt/yihaikerryba;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf;30 20 # # #
-esteelauderba;/opt/esteelauderba;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf;00 21 # # #
-winchannelba;/opt/winchannelba;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf;00 22 # # #
-meeting;/opt/meeting;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf;30 23 # # #
-unileverordermeeting;/opt/unileverordermeeting;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf;00 00 # # #
-rfdszytiga;/opt/rfdszytiga;/backupall;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf;30 01 # # #
+yihaijiali_poc;/opt/app/yihaijiali_poc;/opt/backup;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf;35 18 # # 3
+jinlongyu;/opt/app/jinlongyu;/opt/backup;app;-avz --delete --exclude-from=/data/scripts/app_backup.conf;35 18 # # 3
